# vaapiRemoteTranscoding

./: .gitignore  PLAN.md  README.md
deploy/aur/: PKGBUILD
deploy/proxmox/: container-setup.sh  create-lxc.sh  install.sh
docs/: benchmark-results.md
relay-server/: Cargo.toml  Dockerfile
relay-server/deploy/: README.md
relay-server/deploy/avahi/: relay-server.service
relay-server/deploy/systemd/: env.example  relay-server-pull.service  relay-server-push.service
relay-server/src/: main.rs
vaapi-xvmc-driver/: Makefile
vaapi-xvmc-driver/src/: h264_reconstitute.c  h264_reconstitute.h  mpeg2_headers.c  mpeg2_headers.h  mpeg2_vld.c  mpeg2_vld.h  relay_client.c  relay_client.h  xvmc_backend.c  xvmc_backend.h  xvmc_drv_video.c
vaapi-xvmc-driver/test/: local_mpeg2_decode_only_test.c  local_mpeg2_player.c  reconstruct_frame.c  relay_display_test.c  relay_pixel_test.c  relay_pixel_test_pure.c  relay_pixel_test_slices_long.h  relay_pixel_test_slices_pure.h  render_stress_test.c  smoke_test.c
vaapi-xvmc-driver/tools/: vaapi_x11_shim.c
